--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 
 
-<form action="/home.html" method="post"> <! -temporary will change soon -->
+<form action="#" method="post"> <! -temporary will change soon -->
   <div class="imgcontainer">
-    <img src="./LOGO.png" alt="LOGO" class="avatar">
+    <a href="home.html"><img src="./LOGO.png" alt="LOGO" class="avatar" ></a>
   </div>
 
   <div class="container">
