--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <body>
        <div id="logout">
         <a href="index.html"><h6 type="logoutbtn" class="logout">Logout</h6></a>
-    </div>
+    </div class="selection" >
         <div>
         <a href="home.html"><img src="./LOGO.png" alt="LOGO" height="100"></a>
            <h1>Little Mini Cooperative</h1>
@@ -19,61 +19,61 @@
            <a href="about.html"><button type="aboutbtn" class="firstpage">About</button></a>
            <a href="rules.html"><button type="rulesbtn" class="firstpage">Rules</button></a>
         </div>
-        <div id="home">
+        <div class="List">
             <h2>List of members</h2>
-        <ol>
-            <li>JOHN RUSSEL ARCILLA
-            </li>
-            <li>GERALDINE SALGADO</li>
-            <li>JOYCE DAGOHOY</li>
-            <li>LORNA CANETE </li>
-            <li>GABRIEL IAN LEJANO 
-            </li>
-            <li>JOED DELA CRUZ DELOS SANTOS
-            </li>
-            <li>ASLIA ABUBACAR 
-            </li>
-            <li>ARBELLA MHAY LAODENIO 
-            </li>
-            <li>AILEEN GRAMATICA 
-            </li>
-            <li>ROSE ANN SY 
-            </li>
-            <li>KIT GERALD GEROLAGA 
-            </li>
-            <li>REYNA VILALFUERTE 
-            </li>
-            <li>RUBY ANN DINGLASAN 
-            </li>
-            <li>REYSALYN PUSO</li>
-            <li>ROMNEY DAAGAS 
-            </li>
-            <li>ANDIESON BENITES
-            </li>
-            <li>MICA  AIRA SABER
-            </li>
-            <li>HANNIZEL GAWARAN
-            </li>
-            <li>LAWRENCE GRACIADAS</li>
-            <li>MARK JOSEPH LABISIG
-            </li>
-            <li>PAULO AGUEDAN
-            </li>
-            <li>RAFAEL PEREZ
-            </li>
-            <li>NICO TABUSO
-            </li>
-            <li>MICHAEL STAPLES
-            </li>
-            <li>JUDITH DELACRUZ
-            </li>
-            <li>NICO PALAPAR
-            </li>
-            <li>YMANZETH HERERA
-            </li>
+            <ol>
+                <li>JOHN RUSSEL ARCILLA
+                </li>
+                <li>GERALDINE SALGADO</li>
+                <li>JOYCE DAGOHOY</li>
+                <li>LORNA CANETE </li>
+                <li>GABRIEL IAN LEJANO 
+                </li>
+                <li>JOED DELA CRUZ DELOS SANTOS
+                </li>
+                <li>ASLIA ABUBACAR 
+                </li>
+                <li>ARBELLA MHAY LAODENIO 
+                </li>
+                <li>AILEEN GRAMATICA 
+                </li>
+                <li>ROSE ANN SY 
+                </li>
+                <li>KIT GERALD GEROLAGA 
+                </li>
+                <li>REYNA VILALFUERTE 
+                </li>
+                <li>RUBY ANN DINGLASAN 
+                </li>
+                <li>REYSALYN PUSO</li>
+                <li>ROMNEY DAAGAS 
+                </li>
+                <li>ANDIESON BENITES
+                </li>
+                <li>MICA  AIRA SABER
+                </li>
+                <li>HANNIZEL GAWARAN
+                </li>
+                <li>LAWRENCE GRACIADAS</li>
+                <li>MARK JOSEPH LABISIG
+                </li>
+                <li>PAULO AGUEDAN
+                </li>
+                <li>RAFAEL PEREZ
+                </li>
+                <li>NICO TABUSO
+                </li>
+                <li>MICHAEL STAPLES
+                </li>
+                <li>JUDITH DELACRUZ
+                </li>
+                <li>NICO PALAPAR
+                </li>
+                <li>YMANZETH HERERA
+                </li>
             <li>CLARIZA PALMERO</li>
 
-        </ol>
+            </ol>
         </div>
     
     </body>
